i18n + Working on Form View Calculations

--- a/grupo_express_it/public/scss/grupo_express.bundle.scss
+++ b/grupo_express_it/public/scss/grupo_express.bundle.scss
@@ -65,7 +65,8 @@
 
       > .grid-row > .row > .col.grid-static-col {
         &[data-fieldname="exchange_rate"],
-        &[data-fieldname="fob_unit_price"] {
+        &[data-fieldname="fob_unit_price"],
+        &[data-fieldname="unit_price"] {
           > .static-area {
             display: none; // Hide all exchange rate fields
           }
