--- a/grupo_express_it/public/scss/grupo_express.bundle.scss
+++ b/grupo_express_it/public/scss/grupo_express.bundle.scss
@@ -95,7 +95,7 @@
 .modal {
 
 	.modal-dialog.modal-xl {
-		max-width: 1240px; // Extra 100px
+		max-width: 1280px; // Extra 140px
 	}
 
 	.modal-body {
@@ -106,19 +106,19 @@
 
 		// Adjusting width of columns in the policy_items_dialog() modal
 		.list-item__content:nth-child(2), .list-item__content:nth-child(8) {
-			flex: 0.8; // Policy and Total Price Fields
+			flex: 0.8; // policy and stock_value Fields
 		}
 
 		.list-item__content:nth-child(3), .list-item__content:nth-child(7) {
-			flex: 0.6; // Date and Unit Price Fields
+			flex: 0.6; // date and unit_price Fields
 		}
 
 		.list-item__content:nth-child(4) {
-			flex: 3; // Item Field
+			flex: 3; // item Field
 		}
 
 		.list-item__content:nth-child(5), .list-item__content:nth-child(6) {
-			flex: 0.5; // Qty and UOM Field
+			flex: 0.5; // actual_qty and uom Field
 		}
 
 	}
