Adding Extra UOM plus fixing a API Link

--- a/grupo_express_it/public/scss/grupo_express.bundle.scss
+++ b/grupo_express_it/public/scss/grupo_express.bundle.scss
@@ -16,7 +16,7 @@
 					&[data-fieldname="insurance_cost"] {
 						flex: 0 0 5%;
 						max-width: 5%;
-					},
+					}
 					&[data-fieldname="uom"],
 					&[data-fieldname="fob_unit_price"],
 					&[data-fieldname="unit_price"] {
